@@ -76,5 +76,6 @@
   <script src="../lib/js/action-bars.js"></script>
   <script src="../lib/js/spinners.js"></script>
   <script src="../lib/js/tabs.js"></script>
+  <script src="../lib/js/forms.js"></script>
 </body>
 </html>
